fixed spacing

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -84,8 +84,8 @@ nav {
     } 
 
     .venue-overview {
-        padding: 10px;
-        width: 60%;
+        width: 100%;
+        
 
         p {
             font-size: 1.2em;
@@ -105,6 +105,7 @@ nav {
         }
 
         @media screen and (max-width: 575.98px) {
+            padding: 0px 30px;
             width: 100%;
         }
     }
